--- a/src/main/resources/styles/jfoenixCSS.css
+++ b/src/main/resources/styles/jfoenixCSS.css
@@ -8,7 +8,10 @@
 	-fx-width: 620;
 	-fx-heigh: 420;
 }
-
+.list-view .list-cell:filled:selected:focused,.list-view .list-cell:filled:selected {
+    -fx-background-color: linear-gradient(#328BDB 0%, #207BCF 25%, #1973C9 75%, #0A65BF 100%);
+    -fx-text-fill: white;
+}
 .list-view .list-cell:even {
     -fx-background-color: #282828;
     -fx-text-fill: black;
